--- a/public/template/test.html
+++ b/public/template/test.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-<p>存放模板</p>
-</body>
-</html>
+<!--存放个模板-->
